syntax = "proto3";

package sharder;

option go_package = "code/go/0chain.net/sharder/proto/api/src/proto";

import "sharder_contract.proto";
import "google/api/annotations.proto";
import "google/api/httpbody.proto";

service sharderService {

  rpc GetChainStats(GetChainStatsRequest) returns (GetChainStatsResponse) {
    option (google.api.http) = {
      get : "/v2/_chain_stats"
    };
  };

}